<resources>
    <string name="app_name">Lunch List</string>

    <string name="label_name">Name:</string>
    <string name="label_address">Address:</string>
    <string name="label_type">Type:</string>

    <string name="radio_type_1">Take-Out</string>
    <string name="radio_type_2">Sit-Down</string>
    <string name="radio_type_3">Delivery</string>

    <string name="button_save">Save</string>
</resources>
